fixed, home screen overlaping div

--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,6 @@
+body{
+    font-family: "Bahnschrift", Times, serif;
+}
 p{
     overflow-wrap: break-word;
 }
